--- a/findly-builder/src/app/components/app-experiments/app-experiments.component.html
+++ b/findly-builder/src/app/components/app-experiments/app-experiments.component.html
@@ -109,10 +109,13 @@
                         >{{ vari.code }}</span
                       >
                     </div>
-                    <!-- <div class="variants-block right">
-                      <span class="v-name">B</span>
-                      <span class="winner">Winner</span>
-                    </div> -->
+                    <div class="variants-block right">
+                      <span *ngFor="let vari of exp.variants">
+                        <span class="v-name" [style.background-color]="vari.color">{{ vari.code }}</span>
+                        <span class="winner" *ngIf="vari.leader"><img src="assets/icons/experiment/leader.svg" alt="leader"></span>
+                        <span class="winner" *ngIf="vari.winner"><img src="assets/icons/experiment/winner.svg" alt="winner"></span>
+                      </span>
+                    </div>
                   </div>
                   <div class="col-2 status">
                     <span class="a-status" [ngClass]="exp.state">{{
@@ -131,7 +134,7 @@
                         End Date: {{ exp.end | date: "mediumDate" }}
                       </div>
                     </div>
-                    <div class="right-sec">
+                    <div class="right-sec" *ngIf="exp.duration.days > 0">
                       <div class="hours">
                         {{ 24 * exp.date_days }} hrs more to go
                       </div>
@@ -149,7 +152,7 @@
                     class="col-4 d-flex align-items-center duration-data"
                     *ngIf="exp.state === 'completed'"
                   >
-                    <div class="left-sec">
+                    <!-- <div class="left-sec">
                       <div class="date-stamp">
                         Start Date: {{ exp.start | date: "mediumDate" }}
                       </div>
@@ -158,7 +161,7 @@
                       <div class="hours">
                         End Date: {{ exp.end | date: "mediumDate" }}
                       </div>
-                    </div>
+                    </div> -->
                   </div>
                   <div
                     class="col-4 d-flex align-items-center duration-data justify-content-between"
@@ -263,7 +266,7 @@
                     <div class="col-2 title">{{ expCol.trafficPct }}%</div>
                     <div class="col-1 title">3200</div>
                     <div class="col-2 title">{{ expCol.searches }}</div>
-                    <div class="col-2 title">
+                    <div class="col-2 title" [class.leader_percent]="(expCol.searches > 0) && (expCol.leader)">
                       {{
                         expCol.searches > 0
                           ? expCol.searches + "%"
@@ -428,7 +431,7 @@
             #sliderref
             [config]="someRangeconfig"
             [(ngModel)]="someRange"
-            (change)="sliderChanged()"
+            (slide)="sliderChanged()"
           >
           </nouislider>
         </div>
@@ -494,7 +497,7 @@
       (click)="createExperiment()"
       [disabled]="
         !experimentObj.name ||
-        (exp_status !== 'configured' && form_type === 'edit')
+        (exp_status !== 'configured' && form_type === 'edit') || (variantsArray.length < 2)
       "
     >
       Add
