--- a/findly-builder/src/app/scss/styles.scss
+++ b/findly-builder/src/app/scss/styles.scss
@@ -1658,7 +1658,13 @@ nouislider{
             text-align: center;
         }
     }
-
+    .noUi-connect{
+        background: red;
+        &.c-1-color { background: rgb(255, 0, 0); }
+        &.c-2-color { background: rgb(0, 0, 255); }
+        &.c-3-color { background: rgb(140, 255, 26); }
+        &.c-4-color { background: rgb(255, 255, 0); }
+      }
 }
 
 .experiment-container{
