--- a/findly-builder/src/app/components/add-structured-data/add-structured-data.component.scss
+++ b/findly-builder/src/app/components/add-structured-data/add-structured-data.component.scss
@@ -15,6 +15,7 @@
                     line-height: 20px;
                     margin-left: 8px;
                     color: #202124;
+                    cursor: pointer;
                     img{
                         margin-right: 6px;
                     }
