--- a/findly-builder/src/app/components/app-experiments/app-experiments.component.scss
+++ b/findly-builder/src/app/components/app-experiments/app-experiments.component.scss
@@ -591,3 +591,30 @@
 .disable_edit {
   background-color: #eff0f1;
 }
+.winner-block{
+  .variants-block{
+    .v-name {
+      background: #28a745;
+      display: inline-block;
+      width: 25px;
+      height: 25px;
+      text-align: center;
+      border-radius: 100%;
+      border: 1.5px solid #ffffff;
+      color: #fff;
+      font-weight: 500;
+      font-size: 12px;
+      margin-left: -4px;
+      line-height: 21px;
+      &:first-child {
+        margin: 0;
+      }
+    }
+  }
+  .winner-content{
+    margin-left: -4px;
+    &:first-child {
+      margin: 0;
+    }
+  }
+}
