--- a/findly-builder/src/app/components/add-structured-data/add-structured-data.component.html
+++ b/findly-builder/src/app/components/add-structured-data/add-structured-data.component.html
@@ -88,7 +88,7 @@
                                         <ul class="dropdown-menu content-menu samplejsoncontent" ngbDropdownMenu>                                         
                                         <div class="row m-0">
                                             <div class="lft_sec">1</div>
-                                            <div class="rgt_sec">1</div>
+                                            <div class="rgt_sec">{{openingBrace}}</div>
                                         </div>
                                         <div class="row m-0">
                                             <div class="lft_sec">2</div>
@@ -108,7 +108,7 @@
                                         </div>   
                                         <div class="row m-0">
                                             <div class="lft_sec">6</div>
-                                            <div class="rgt_sec">1</div>
+                                            <div class="rgt_sec">{{closingBrace}}</div>
                                         </div>                                         
                                         </ul>
                                     </div>
