--- a/findly-builder/src/app/components/app-header/app-header.component.scss
+++ b/findly-builder/src/app/components/app-header/app-header.component.scss
@@ -111,6 +111,11 @@
                     border-radius: 4px;
                     border: 0;
                     min-width: 175px;
+                    .active{
+                      a{
+                        font-weight: bold !important;
+                      }
+                    }
                     li{
                       a{
                         text-transform: capitalize;
@@ -123,6 +128,7 @@
                   }
                 }
               }
+              
           }
         }
       }
